# linux-server-monitoring

./: .env.example  .gitignore  AGENT_BUILD_GUIDE.md  AGENT_STORAGE_OPTIONS.md  DASHBOARD_API.md  DEPLOYMENT.md  DOCKER_BUILD_COMMANDS.md  DOCKER_DEPLOYMENT.md  DOCKER_HUB_DEPLOYMENT.md  Dockerfile.server  GITHUB_ACTIONS_SETUP.md  README.md  agent_config.example.yaml  agent_config.yaml  alembic.ini  build-agent.sh  docker-compose.dev.yml  docker-compose.hub.yml  docker-compose.yml  install-agent.sh  monitoring-agent.service  pyproject.toml  requirements.txt  send_test_metrics.py  setup-dev.sh  test_docker_deployment.py
.github/workflows/: build-agent.yml  docker-publish.yml
agent/: __init__.py  main.py  requirements.txt  service.py
agent/config/: __init__.py  manager.py
agent/metrics/: __init__.py  collector.py  systemd_monitor.py
agent/transport/: __init__.py  http_transmitter.py
dashboard/: .dockerignore  API_INTEGRATION_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_CONFIGURATION.md  Dockerfile  README.md  THEME_SYSTEM.md  THEME_SYSTEM_STATUS.md  USER_GUIDE.md  env.sh  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  test-env.sh  tsconfig.app.json  tsconfig.test.json  vite.config.ts
dashboard/public/: env-config.js  manifest.json  sw.js
dashboard/src/: App.css  App.test.tsx  App.tsx  index.css  main.tsx
examples/: agent_example.py  alert_engine_example.py  api_usage_example.py
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_add_dashboard_tables.py
scripts/: dev-reset.sh  dev-start.sh  dev-stop.sh  load-env.sh  test-all.sh
server/: __init__.py  main.py
server/alerts/: __init__.py  engine.py
server/api/: __init__.py  dashboard.py  metrics.py
server/auth/: __init__.py  dashboard_auth.py  service.py
server/cli/: __init__.py  create_admin.py
server/database/: __init__.py  cli.py  connection.py  manager.py  models.py  operations.py
server/health/: __init__.py  manager.py
server/middleware/: __init__.py  security.py
server/services/: __init__.py  dashboard_settings.py  metrics_aggregation.py
server/websocket/: __init__.py  dashboard_websocket.py
shared/: __init__.py  interfaces.py  models.py
tests/: __init__.py  conftest.py
(+147 files in other folders)
